[开发] 短信验证码和图片验证码重构完成

--- a/security-browser/src/main/resources/resources/easy-signIn.html
+++ b/security-browser/src/main/resources/resources/easy-signIn.html
@@ -22,7 +22,7 @@
             <td>
                 <input type="text" name="imageCode">
                 <!--测试传入参数覆盖配置参数的方法-->
-                <img src="/code/image?width=200">
+                <img src="/validate/code/image?width=200">
             </td>
         </tr>
         <tr>
@@ -47,7 +47,7 @@
             <td>短信验证码:</td>
             <td>
                 <input type="text" name="smsCode">
-                <a href="/code/sms?mobile=13012345678">发送验证码</a>
+                <a href="/validate/code/sms?mobile=13012345678">发送验证码</a>
             </td>
         </tr>
         <tr>
