--- a/security-browser/src/main/resources/resources/easy-signIn.html
+++ b/security-browser/src/main/resources/resources/easy-signIn.html
@@ -47,7 +47,7 @@
             <td>短信验证码:</td>
             <td>
                 <input type="text" name="smsCode">
-                <a href="/validate/code/sms?mobile=13012345678">发送验证码</a>
+                <a href="/validate/code/sms?mobile=13012345678&template=2222">发送验证码</a>
             </td>
         </tr>
         <tr>
