[开发] qq 第三方登录的相关开发完成

--- a/security-browser/src/main/resources/resources/easy-signIn.html
+++ b/security-browser/src/main/resources/resources/easy-signIn.html
@@ -56,5 +56,11 @@
     </table>
 </form>
 
+<br>
+<h3>社交登录</h3>
+<!--/auth 是 social 请求拦截的过滤器前缀,  /qq 是服务提供商的识别码-->
+<a href="/qqLogin/callback.do">QQ登录</a>
+
+
 </body>
 </html>
