[开发] 微信登录功能开发完成

--- a/security-browser/src/main/resources/resources/easy-signIn.html
+++ b/security-browser/src/main/resources/resources/easy-signIn.html
@@ -60,7 +60,8 @@
 <h3>社交登录</h3>
 <!--/auth 是 social 请求拦截的过滤器前缀,  /qq 是服务提供商的识别码-->
 <a href="/qqLogin/callback.do">QQ登录</a>
-
+<!--微信登录的接口-->
+<a href="/qqLogin/weixin">微信登录</a>
 
 </body>
 </html>
