[开发] 绑定/解绑功能 及 绑定/解绑后的相关视图开发完成

--- a/security-demo/src/main/resources/resources/demo-banding.html
+++ b/security-demo/src/main/resources/resources/demo-banding.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h2>Demo绑定页</h2>
+<!--提交地址中 connect 是固定的, weixin 是社交账号的服务提供商的名字-->
+<!--解绑的时候, 只需要发送 delete 请求即可, 接口依然是当前的接口-->
 <form action="/connect/weixin" method="post">
     <button type="submit">绑定微信</button>
 </form>
