--- a/security-browser/src/main/resources/resources/easy-sign-out.html
+++ b/security-browser/src/main/resources/resources/easy-sign-out.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Insert title here</title>
+    <title>退出</title>
 </head>
 <body>
-    index
-    <a href="/signOut">退出</a>
+<h2>退出成功</h2>
+
 </body>
 </html>
