[开发] 退出登录成功后的返回数据类型设置成可配置的, 开发完成

--- a/security-browser/src/main/resources/resources/easy-sign-out.html
+++ b/security-browser/src/main/resources/resources/easy-sign-out.html
@@ -5,7 +5,8 @@
     <title>退出</title>
 </head>
 <body>
-<h2>退出成功</h2>
+<h2>默认的退出成功页面</h2>
+<h3>可以通过配置 easy-spring.security.browser.sign-out.sign-out-success-url = /demo-sign-out.html 进行修改</h3>
 
 </body>
 </html>
